<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.maxsoft.stepstracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.maxsoft.stepstracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.maxsoft.stepstracker.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.maxsoft.stepstracker.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.maxsoft.stepstracker.ui.goals.GoalsFragment"
        android:label="@string/goal_setting"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="com.maxsoft.stepstracker.ui.challenges.ChallengesFragment"
        android:label="@string/challenges"
        tools:layout="@layout/fragment_challenges" />

    <fragment
        android:id="@+id/navigation_sync"
        android:name="com.maxsoft.stepstracker.ui.sync.SyncFragment"
        android:label="@string/sync_health_apps"
        tools:layout="@layout/fragment_sync" />

    <fragment
        android:id="@+id/navigation_backup"
        android:name="com.maxsoft.stepstracker.ui.backup.BackupFragment"
        android:label="@string/data_backup"
        tools:layout="@layout/fragment_backup" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.maxsoft.stepstracker.ui.profile.ProfileFragment"
        android:label="@string/personal_info_settings"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_activity_breakdown"
        android:name="com.maxsoft.stepstracker.ui.activitybreakdown.ActivityBreakdownFragment"
        android:label="@string/detailed_activity_breakdown"
        tools:layout="@layout/fragment_activity_breakdown" />

    <fragment
        android:id="@+id/navigation_health_benefits"
        android:name="com.maxsoft.stepstracker.ui.healthbenefits.HealthBenefitsFragment"
        android:label="@string/health_benefits"
        tools:layout="@layout/fragment_health_benefits" />

    <fragment
        android:id="@+id/navigation_walking_tips"
        android:name="com.maxsoft.stepstracker.ui.walkingtips.WalkingTipsFragment"
        android:label="@string/walking_tips"
        tools:layout="@layout/fragment_walking_tips" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.maxsoft.stepstracker.ui.about.AboutFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about" />

</navigation>