<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/text_steps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/text_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/text_calories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/text_distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_start"
            app:layout_constraintTop_toBottomOf="@id/text_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_reset"
            android:layout_marginTop="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_reset"
            app:layout_constraintTop_toTopOf="@id/button_start_pause"
            app:layout_constraintStart_toEndOf="@id/button_start_pause"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_daily_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_last_24_hours"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/button_start_pause"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />



        <TextView
            android:id="@+id/text_weekly_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_weekly"
            android:textSize="18sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />



        <TextView
            android:id="@+id/text_monthly_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_monthly"
            android:textSize="18sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_progress"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>